Sceleton architecture,database,tutor overview, login, student group selection and bonus calculation done

--- a/Backend/atse_project/src/main/webapp/index.html
+++ b/Backend/atse_project/src/main/webapp/index.html
@@ -8,14 +8,17 @@
   </head>
 
   <body>
-    <h1>Hello App Engine!</h1>
+    <h1>Hello Team members!</h1>
   
     <table>
       <tr>
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
       <tr>
-        <td><a href='/hello'>The servlet</a></td>
+        <td><a href='/login'>Go to the web application</a></td>
+      </tr>
+      <tr>
+        <td><a href='/hello'>Create some data in the database</a></td>
       </tr>
     </table>
   </body>
