Convert JSP to Servlet response, sadly.

--- a/Backend/atse_project/src/main/webapp/index.html
+++ b/Backend/atse_project/src/main/webapp/index.html
@@ -15,7 +15,7 @@
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
       <tr>
-        <td><a href='/signup.jsp'>Create a new user</a></td>
+        <td><a href='/signup'>Create a new user</a></td>
       </tr>
       <tr>
         <td><a href='/login'>Login as an existing user</a></td>
