Clean up home UI and fix DB initialization

--- a/Backend/atse_project/src/main/webapp/index.html
+++ b/Backend/atse_project/src/main/webapp/index.html
@@ -4,24 +4,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <title>Hello App Engine</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" 
+    integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+    <title>Automated Attendance Tracking</title>
   </head>
 
   <body>
-    <h1>Hello Team members!</h1>
-  
+    <h2>Automated Attendance Tracking System</h2>
+    <h4>Please login or click "Sign Up" to create a new account.</h4>
     <table>
       <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href='/signup'>Create a new user</a></td>
-      </tr>
-      <tr>
-        <td><a href='/login'>Login as an existing user</a></td>
-      </tr>
-      <tr>
-        <td><a href='/hello'>Create some data in the database</a></td>
+      <td><a href='login'><button class="btn btn-primary">Log In</button></a></td>
+      <td><a href='signup'><button class="btn btn-primary">Sign Up</button></a></td>
+      <!-- <td><a href='hello'><button class="btn btn-primary">Initialize</button></a></td> -->
       </tr>
     </table>
   </body>
